--- a/css/main.css
+++ b/css/main.css
@@ -14,9 +14,19 @@ https://tt5.org/webfont-%E7%89%88%E7%9A%84%E6%80%9D%E6%BA%90%E9%BB%91%E9%AB%94%E
         url(//fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Bold.otf) format('opentype');
  }
 
+@font-face {
+   font-family: 'Noto Sans TC';
+   font-style: normal;
+   font-weight: 400;
+   src: url(//fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Regular.woff2) format('woff2'),
+        url(//fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Regular.woff) format('woff'),
+        url(//fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Regular.otf) format('opentype');
+ }
+
 
 body{
  font-family: 'Noto Sans TC', sans-serif;
+ font-weight: 700;
 }
 #main{
   width : 1000px;
@@ -37,6 +47,8 @@ body{
   font-size: 28px;
   display: table;
   width: 100%;
+  position: relative;
+  z-index: 25;
 }
 #main .menu .item{
   width: 33%;
@@ -81,23 +93,75 @@ body{
 #main .menu .item .child:hover{
   background-color: #000000;
 }
-#main .banner{
-  height: 400px;
-  background-color: #8A8000;
-  margin-bottom: 28px;
-}
-#main .banner .img1{
-  width: 100%;
-  height: 100%;
-  background-image: url(../images/DM.jpg);
-  background-size: contain;
-}
-#main .content{
+#main .index_content{
   margin-bottom: 30px;
   font-size: 16px;
   width: 100%;
-  display: table;
   padding-top: 10px;
+  position: relative
+}
+#main .index_content .index_left{
+  width: 523px;
+  position: absolute;
+}
+#main .index_content .index_left .img_show{
+  background-color: #8A8000;
+  height: 380px;
+  margin-bottom: 12px;
+  background-size:100% 100%;
+  background-repeat: no-repeat;
+/*
+  -webkit-transition: background-image 0.2s;
+  transition: background-image 0.2s;
+*/
+}
+#main .index_content .index_left .img_list>div{
+  background-color: #8A8000;
+  width: 80px;
+  height: 60px;
+  margin-right: 4px;
+  display: inline-block;
+  background-size : 100% 100%;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+#main .index_content .index_left .img_list .active{
+  outline: 4px solid #8a8000;
+}
+#main .index_content .index_right{
+  margin-left: 548px;
+  font-size: 16px;
+  line-height: 20px;
+}
+#main .index_content .index_right .g1{
+  font-size: 24px;
+  line-height: 34px;
+}
+#main .index_content .index_right .g2{
+  font-size: 24px;
+  line-height: 34px;
+  border-bottom: 2px solid #8A8000;
+  margin-bottom: 18px;
+  display: inline-block;
+  
+}
+#main .index_content .index_right .g3{
+  font-weight: 400;
+}
+
+#main .index_content .index_right .g4{
+  width: 120px;
+  height: 45px;
+  background-color: #8A8000;
+  border-radius: 13px;
+  text-align: center;
+  color: #ffffff;
+  line-height: 45px;
+  font-size: 22px;
+  margin-top: 25px;
+  cursor: pointer;
+  text-decoration: none;
+  display: inline-block
 }
 #main .content a{
   color: #8A8000;
