--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,6 @@ https://tt5.org/webfont-%E7%89%88%E7%9A%84%E6%80%9D%E6%BA%90%E9%BB%91%E9%AB%94%E
         url(//fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Bold.woff) format('woff'),
         url(//fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Bold.otf) format('opentype');
  }
-
 @font-face {
    font-family: 'Noto Sans TC';
    font-style: normal;
@@ -48,7 +47,7 @@ body{
   display: table;
   width: 100%;
   position: relative;
-  z-index: 25;
+  z-index: 15;
 }
 #main .menu .item{
   width: 33%;
@@ -93,75 +92,23 @@ body{
 #main .menu .item .child:hover{
   background-color: #000000;
 }
-#main .index_content{
+#main .banner{
+  height: 400px;
+  background-color: #8A8000;
+  margin-bottom: 28px;
+}
+#main .banner .img1{
+  width: 100%;
+  height: 100%;
+  background-image: url(../images/DM.jpg);
+  background-size: contain;
+}
+#main .content{
   margin-bottom: 30px;
   font-size: 16px;
   width: 100%;
+  display: table;
   padding-top: 10px;
-  position: relative
-}
-#main .index_content .index_left{
-  width: 523px;
-  position: absolute;
-}
-#main .index_content .index_left .img_show{
-  background-color: #8A8000;
-  height: 380px;
-  margin-bottom: 12px;
-  background-size:100% 100%;
-  background-repeat: no-repeat;
-/*
-  -webkit-transition: background-image 0.2s;
-  transition: background-image 0.2s;
-*/
-}
-#main .index_content .index_left .img_list>div{
-  background-color: #8A8000;
-  width: 80px;
-  height: 60px;
-  margin-right: 4px;
-  display: inline-block;
-  background-size : 100% 100%;
-  background-repeat: no-repeat;
-  cursor: pointer;
-}
-#main .index_content .index_left .img_list .active{
-  outline: 4px solid #8a8000;
-}
-#main .index_content .index_right{
-  margin-left: 548px;
-  font-size: 16px;
-  line-height: 20px;
-}
-#main .index_content .index_right .g1{
-  font-size: 24px;
-  line-height: 34px;
-}
-#main .index_content .index_right .g2{
-  font-size: 24px;
-  line-height: 34px;
-  border-bottom: 2px solid #8A8000;
-  margin-bottom: 18px;
-  display: inline-block;
-  
-}
-#main .index_content .index_right .g3{
-  font-weight: 400;
-}
-
-#main .index_content .index_right .g4{
-  width: 120px;
-  height: 45px;
-  background-color: #8A8000;
-  border-radius: 13px;
-  text-align: center;
-  color: #ffffff;
-  line-height: 45px;
-  font-size: 22px;
-  margin-top: 25px;
-  cursor: pointer;
-  text-decoration: none;
-  display: inline-block
 }
 #main .content a{
   color: #8A8000;
@@ -196,6 +143,79 @@ body{
   line-height: 22px;
   letter-spacing: 1px;
 }
+
+
+#main .product_content{
+  margin-bottom: 30px;
+  font-size: 16px;
+  width: 100%;
+  padding-top: 10px;
+  position: relative
+}
+#main .product_content .left{
+  width: 523px;
+  position: absolute;
+}
+#main .product_content .left .img_show{
+  background-color: #8A8000;
+  height: 380px;
+  margin-bottom: 12px;
+  background-size:100% 100%;
+  background-repeat: no-repeat;
+/*
+  -webkit-transition: background-image 0.2s;
+  transition: background-image 0.2s;
+*/
+}
+#main .product_content .left .img_list>div{
+  background-color: #8A8000;
+  width: 80px;
+  height: 60px;
+  margin-right: 4px;
+  display: inline-block;
+  background-size : 100% 100%;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+#main .product_content .left .img_list .active{
+  outline: 4px solid #8a8000;
+}
+#main .product_content .right{
+  margin-left: 548px;
+  font-size: 16px;
+  line-height: 20px;
+}
+#main .product_content .right .g1{
+  font-size: 24px;
+  line-height: 34px;
+}
+#main .product_content .right .g2{
+  font-size: 24px;
+  line-height: 34px;
+  border-bottom: 2px solid #8A8000;
+  margin-bottom: 18px;
+  display: inline-block;
+  
+}
+#main .product_content .right .g3{
+  font-weight: 400;
+}
+
+#main .product_content .right .g4{
+  width: 120px;
+  height: 45px;
+  background-color: #8A8000;
+  border-radius: 13px;
+  text-align: center;
+  color: #ffffff;
+  line-height: 45px;
+  font-size: 22px;
+  margin-top: 25px;
+  cursor: pointer;
+  text-decoration: none;
+  display: inline-block
+}
+
 
 #footer{
   background-color: #8A8000;
